setup/manifest/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: "${APP_NAME}"
  namespace: "${APP_NAME}"
spec:
  gatewayClassName: nginx
  infrastructure:
    labels:
      app.kubernetes.io/part-of: "${APP_NAME}"
    parametersRef:
      group: gateway.nginx.org
      kind: NginxProxy
      name: "${APP_NAME}"
  listeners:
    - name: https
      hostname: "${DOMAIN}"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - {kind: Secret, name: "${APP_NAME}-tls"}
      allowedRoutes:
        namespaces: {from: Same}
        kinds:
          - {kind: HTTPRoute}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: "${APP_NAME}"
  namespace: "${APP_NAME}"
spec:
  parentRefs:
    - {name: "${APP_NAME}", sectionName: https}
  hostnames: ["${DOMAIN}"]
  rules:
    - matches:
        - path: {type: PathPrefix, value: /}
      backendRefs:
        - {name: "${APP_NAME}", port: 80}
